fix: fixed song name overflow in songlist

--- a/static/css/page.less
+++ b/static/css/page.less
@@ -229,6 +229,13 @@
             right: 20px;
             top:2px;
         }
+        .song-info {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            display: block;
+            padding-right: 30px;
+        }
     }
     &-item.nmplaylist-current, &-item:hover {
         color:#ee4d50;
